# ceobench-src

./: .gitignore  KEYS.md  README.md  deepcell-instructions.md  profile_step_day.py  pyproject.toml  start_fresh_gemini.sh  start_fresh_gemini_flash.sh  start_fresh_grok.sh  start_fresh_opus.sh  test_competitor_post_llm.py
deepcell-helpers/: advance_week.py  fresh_run.sh  gen_model.py  roll_week.py
monitor/: bench_dashboard_queries.py  bench_nmdb_save.py  bench_open_issues_fix.py  modal_app.py  profile_advance_week.py  profile_step_day.py  push_data.py
paper/: intro.tex
public/: .gitignore  README.md  novamind-operation  requirements.txt
public/docs/: cli-reference.md  cli.md  simulator-instructions.md  tables-reference.md  tools-reference.md
public/docs/api/: analytics.json  enterprise.json  infrastructure.json  market.json  marketing.json  pricing.json  research.json
public/docs/novamind_api/: __init__.py  (+8 more)
public_sources/: README.md
scripts/: build_public.py  build_public.sh  generate_public_docs.py  sim_competitor_events.py  sim_no_llm.py  simulate_competitor_events.py
src/saas_bench/: _embedded_key.py  _public_cli.py  api_server.py  config.py  customer_llm.py  database.py  db_protection.py  enterprise.py  environment.py  novamind_cli.py  server_entry.py  simulation.py  tool_docs.json  tools.py
tests/: test_agent_prompt_transform.py  test_anthropic_agent_models.py  test_arena_coordinator.py  test_arena_shared_market.py  test_bash_agent_openai_threading.py  test_bash_agent_run_control.py  test_ceobench_customer_choice.py  test_docs_coverage.py
(+38 files in other folders)
