[project]
name = "saas-bench"
version = "0.1.0"
description = "SaaS Bench - AI subscription service benchmark"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.77.1",
    "boto3>=1.42.41",
    "cryptography>=46.0.3",
    "fastapi>=0.133.1",
    "markdown>=3.10.1",
    "matplotlib>=3.10.8",
    "mcp>=1.0.0",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.9",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
    "weasyprint>=68.0",
]

[project.scripts]
novamind-operation = "saas_bench.novamind_cli:operation_main"
novamind = "saas_bench.novamind_cli:novamind_main"

[tool.hatch.build.targets.wheel]
packages = ["src/saas_bench"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
